--- a/credit_card_fraud_revised.ipynb
+++ b/credit_card_fraud_revised.ipynb
@@ -77,11 +77,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0    394\n",
-      "1    393\n",
+      "1    397\n",
+      "0    390\n",
       "Name: Class, dtype: int64\n",
-      "1    99\n",
-      "0    98\n",
+      "0    102\n",
+      "1     95\n",
       "Name: Class, dtype: int64\n"
      ]
     }
@@ -97,6 +97,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Gradient Boosting Classifier"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -107,13 +114,13 @@
      "text": [
       "\n",
       "Best parameters:\n",
-      " {'learning_rate': 0.1, 'loss': 'exponential', 'max_depth': 3, 'n_estimators': 125}\n",
+      " {'learning_rate': 1, 'loss': 'exponential', 'max_depth': 3, 'n_estimators': 250}\n",
       "\n",
       "Best score:\n",
-      " 0.9479034307496823\n",
+      " 0.951715374841169\n",
       "\n",
       "runtime:\n",
-      " 49.169527 seconds\n"
+      " 48.602552 seconds\n"
      ]
     }
    ],
@@ -146,17 +153,17 @@
      "output_type": "stream",
      "text": [
       "score array:\n",
-      " [0.9        0.925      0.9625     0.96202532 0.93589744 0.98717949\n",
-      " 0.93589744 0.93589744 0.93589744 0.94871795]\n",
+      " [0.94936709 0.92405063 0.94936709 0.91139241 0.96202532 0.98734177\n",
+      " 0.92405063 0.96153846 0.97435897 0.93589744]\n",
       "\n",
       "score array mean:\n",
-      " 0.9429012495942877\n",
+      " 0.9479389808503733\n",
       "\n",
       "AUROC score:\n",
       " 1.0\n",
       "\n",
       "runtime:\n",
-      " 2.619609000000004 seconds\n"
+      " 2.496974999999999 seconds\n"
      ]
     }
    ],
@@ -193,17 +200,17 @@
      "output_type": "stream",
      "text": [
       "score array:\n",
-      " [0.9        0.95       0.9        0.85       0.8        0.95\n",
-      " 0.9        1.         0.89473684 0.94444444]\n",
+      " [0.95238095 0.85714286 0.85       0.95       0.95       0.89473684\n",
+      " 0.89473684 0.84210526 1.         0.89473684]\n",
       "\n",
       "score array mean:\n",
-      " 0.9089181286549708\n",
+      " 0.9085839598997494\n",
       "\n",
       "AUROC score:\n",
-      " 0.976602762317048\n",
+      " 0.9720330237358101\n",
       "\n",
       "runtime:\n",
-      " 3.520240000000001 seconds\n"
+      " 3.435350999999997 seconds\n"
      ]
     }
    ],
@@ -237,13 +244,13 @@
      "text": [
       "\n",
       "Best parameters:\n",
-      " {'learning_rate': 1, 'loss': 'exponential', 'max_depth': 3, 'n_estimators': 125, 'subsample': 0.8}\n",
+      " {'learning_rate': 1, 'loss': 'exponential', 'max_depth': 3, 'n_estimators': 125, 'subsample': 0.5}\n",
       "\n",
       "Best score:\n",
       " 0.9428208386277002\n",
       "\n",
       "runtime:\n",
-      " 1.914601999999995 seconds\n"
+      " 1.9390590000000003 seconds\n"
      ]
     }
    ],
@@ -274,17 +281,17 @@
      "output_type": "stream",
      "text": [
       "score array:\n",
-      " [0.925      0.9125     0.9625     0.94936709 0.93589744 0.98717949\n",
-      " 0.92307692 0.91025641 0.93589744 0.96153846]\n",
+      " [0.94936709 0.92405063 0.94936709 0.89873418 0.94936709 0.96202532\n",
+      " 0.93670886 0.96153846 0.98717949 0.91025641]\n",
       "\n",
       "score array mean:\n",
-      " 0.9403213242453748\n",
+      " 0.9428594612138917\n",
       "\n",
       "AUROC score:\n",
       " 1.0\n",
       "\n",
       "runtime:\n",
-      " 1.7049020000000041 seconds\n"
+      " 1.7450700000000055 seconds\n"
      ]
     }
    ],
@@ -318,17 +325,17 @@
      "output_type": "stream",
      "text": [
       "score array:\n",
-      " [0.9        0.95       0.9        0.85       0.85       0.9\n",
-      " 0.95       1.         0.89473684 0.94444444]\n",
+      " [0.9047619  0.9047619  0.9        0.95       0.95       0.89473684\n",
+      " 0.94736842 0.84210526 1.         0.94736842]\n",
       "\n",
       "score array mean:\n",
-      " 0.9139181286549709\n",
+      " 0.924110275689223\n",
       "\n",
       "AUROC score:\n",
-      " 0.9651618223046794\n",
+      " 0.9699690402476779\n",
       "\n",
       "runtime:\n",
-      " 2.174100000000003 seconds\n"
+      " 2.2192819999999998 seconds\n"
      ]
     }
    ],
@@ -360,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -368,12 +375,12 @@
      "output_type": "stream",
      "text": [
       "10 kbest features:\n",
-      "['Time', 'V4', 'V8', 'V14', 'V16', 'V21', 'V23', 'V25', 'V28', 'Amount']\n",
-      "1    394\n",
-      "0    393\n",
+      "['V2', 'V3', 'V4', 'V9', 'V10', 'V11', 'V12', 'V14', 'V16', 'V17']\n",
+      "0    402\n",
+      "1    385\n",
       "Name: Class, dtype: int64\n",
-      "0    99\n",
-      "1    98\n",
+      "1    107\n",
+      "0     90\n",
       "Name: Class, dtype: int64\n"
      ]
     }
@@ -403,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -411,17 +418,17 @@
      "output_type": "stream",
      "text": [
       "score array:\n",
-      " [0.95       0.9125     0.9375     0.89873418 0.93589744 0.88461538\n",
-      " 0.93589744 0.87179487 0.92307692 0.93589744]\n",
+      " [0.95       0.95       0.96202532 0.94936709 0.89873418 0.93589744\n",
+      " 0.96153846 0.94871795 0.92307692 0.93589744]\n",
       "\n",
       "score array mean:\n",
-      " 0.9185913664394677\n",
+      " 0.9415254787406686\n",
       "\n",
       "AUROC score:\n",
       " 1.0\n",
       "\n",
       "runtime:\n",
-      " 1.1496199999999988 seconds\n"
+      " 1.0537500000000009 seconds\n"
      ]
     }
    ],
@@ -447,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -455,17 +462,17 @@
      "output_type": "stream",
      "text": [
       "score array:\n",
-      " [1.         1.         0.9        0.95       0.9        0.95\n",
-      " 1.         0.85       0.94736842 0.94444444]\n",
+      " [0.95       1.         0.9        1.         1.         0.95\n",
+      " 0.9        1.         0.94736842 0.89473684]\n",
       "\n",
       "score array mean:\n",
-      " 0.9441812865497077\n",
+      " 0.9542105263157895\n",
       "\n",
       "AUROC score:\n",
-      " 0.9820655534941248\n",
+      " 0.9771547248182761\n",
       "\n",
       "runtime:\n",
-      " 1.549309000000008 seconds\n"
+      " 1.4591670000000008 seconds\n"
      ]
     }
    ],
@@ -477,6 +484,160 @@
     "print('score array:\\n', scores_clf4_test)\n",
     "print('\\nscore array mean:\\n', np.mean(scores_clf4_test))\n",
     "print('\\nAUROC score:\\n', roc_auc_score(y_test, prob_y_test))\n",
+    "print('\\nruntime:\\n',time.clock() - start_time, 'seconds')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Logistic Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "score array:\n",
+      " [0.9125     0.95       0.93670886 0.94936709 0.84810127 0.93589744\n",
+      " 0.94871795 0.91025641 0.8974359  0.94871795]\n",
+      "\n",
+      "score array mean:\n",
+      " 0.9237702856215515\n",
+      "\n",
+      "AUROC score:\n",
+      " 0.9755831233443174\n",
+      "\n",
+      "runtime:\n",
+      " 1.6436940000000035 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "lr = LogisticRegression(C=.01, penalty='l1')\n",
+    "lr.fit(X_ktrain, y_train)\n",
+    "\n",
+    "scores_lr = cross_val_score(lr, X_ktrain, y_train, cv=10)\n",
+    "prob_y = lr.predict_proba(X_ktrain)\n",
+    "prob_y = [p[1] for p in prob_y]\n",
+    "\n",
+    "print('score array:\\n', scores_lr)\n",
+    "print('\\nscore array mean:\\n', np.mean(scores_lr))\n",
+    "print('\\nAUROC score:\\n', roc_auc_score(y_train, prob_y))\n",
+    "print('\\nruntime:\\n',time.clock() - start_time, 'seconds')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "score array:\n",
+      " [0.7        0.85       0.85       0.85       0.9        0.7\n",
+      " 0.6        0.78947368 0.73684211 0.89473684]\n",
+      "\n",
+      "score array mean:\n",
+      " 0.7871052631578948\n",
+      "\n",
+      "AUROC score:\n",
+      " 0.9757009345794393\n",
+      "\n",
+      "runtime:\n",
+      " 1.683790000000002 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "scores_lr_test = cross_val_score(lr, X_ktest, y_test, cv=10)\n",
+    "prob_y_test = lr.predict_proba(X_ktest)\n",
+    "prob_y_test = [p[1] for p in prob_y_test]\n",
+    "\n",
+    "print('score array:\\n', scores_lr_test)\n",
+    "print('\\nscore array mean:\\n', np.mean(scores_lr_test))\n",
+    "print('\\nAUROC score:\\n', roc_auc_score(y_test, prob_y_test))\n",
+    "print('\\nruntime:\\n',time.clock() - start_time, 'seconds')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ridge Classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "score array:\n",
+      " [0.7625     0.675      0.7721519  0.70886076 0.6835443  0.75641026\n",
+      " 0.80769231 0.76923077 0.73076923 0.71794872]\n",
+      "\n",
+      "score array mean:\n",
+      " 0.7384108244076598\n",
+      "\n",
+      "runtime:\n",
+      " 1.8225029999999975 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import RidgeClassifier\n",
+    "rclf = RidgeClassifier(alpha=.01, fit_intercept=False)\n",
+    "rclf.fit(X_ktrain,y_train)\n",
+    "\n",
+    "scores_rclf = cross_val_score(rclf, X_ktrain, y_train, cv=10)\n",
+    "#prob_y = rclf.predict_proba(X_ktrain)\n",
+    "#prob_y = [p[1] for p in prob_y]\n",
+    "\n",
+    "print('score array:\\n', scores_rclf)\n",
+    "print('\\nscore array mean:\\n', np.mean(scores_rclf))\n",
+    "#print('\\nAUROC score:\\n', roc_auc_score(y_train, prob_y))\n",
+    "print('\\nruntime:\\n',time.clock() - start_time, 'seconds')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "score array:\n",
+      " [0.8        0.8        0.8        0.9        0.75       0.65\n",
+      " 0.65       0.78947368 0.73684211 0.68421053]\n",
+      "\n",
+      "score array mean:\n",
+      " 0.7560526315789474\n",
+      "\n",
+      "runtime:\n",
+      " 1.8727810000000034 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "scores_rclf_test = cross_val_score(rclf, X_ktest, y_test, cv=10)\n",
+    "\n",
+    "print('score array:\\n', scores_rclf_test)\n",
+    "print('\\nscore array mean:\\n', np.mean(scores_rclf_test))\n",
+    "#print('\\nAUROC score:\\n', roc_auc_score(y_train, prob_y))\n",
     "print('\\nruntime:\\n',time.clock() - start_time, 'seconds')"
    ]
   },
