--- a/credit_card_fraud_revised.ipynb
+++ b/credit_card_fraud_revised.ipynb
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -114,13 +114,13 @@
      "text": [
       "\n",
       "Best parameters:\n",
-      " {'learning_rate': 1, 'loss': 'exponential', 'max_depth': 3, 'n_estimators': 250}\n",
+      " {'learning_rate': 0.01, 'loss': 'exponential', 'max_depth': 2, 'n_estimators': 250}\n",
       "\n",
       "Best score:\n",
-      " 0.951715374841169\n",
+      " 0.9428208386277002\n",
       "\n",
       "runtime:\n",
-      " 48.602552 seconds\n"
+      " 50.221919 seconds\n"
      ]
     }
    ],
@@ -144,8 +144,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "¿ GridSearchCV often finds different parameters each time I run it, how should I handle this ?"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -153,17 +160,17 @@
      "output_type": "stream",
      "text": [
       "score array:\n",
-      " [0.94936709 0.92405063 0.94936709 0.91139241 0.96202532 0.98734177\n",
-      " 0.92405063 0.96153846 0.97435897 0.93589744]\n",
+      " [0.97468354 0.91139241 0.96202532 0.93670886 0.97468354 0.91139241\n",
+      " 0.96202532 0.92307692 0.96153846 0.93589744]\n",
       "\n",
       "score array mean:\n",
-      " 0.9479389808503733\n",
+      " 0.9453424212917885\n",
       "\n",
       "AUROC score:\n",
-      " 1.0\n",
+      " 0.9932958728928503\n",
       "\n",
       "runtime:\n",
-      " 2.496974999999999 seconds\n"
+      " 3.458393000000001 seconds\n"
      ]
     }
    ],
@@ -173,9 +180,9 @@
     "from sklearn.metrics import roc_auc_score\n",
     "\n",
     "clf2 = ensemble.GradientBoostingClassifier(loss='exponential',\n",
-    "                                           learning_rate=0.1,\n",
-    "                                           n_estimators=125,\n",
-    "                                           max_depth=3)\n",
+    "                                           learning_rate=0.01,\n",
+    "                                           n_estimators=250,\n",
+    "                                           max_depth=2)\n",
     "start_time = time.clock()\n",
     "clf2.fit(X_train, y_train)\n",
     "scores_clf2 = cross_val_score(clf2, X_train, y_train, cv=10)\n",
@@ -192,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -200,17 +207,17 @@
      "output_type": "stream",
      "text": [
       "score array:\n",
-      " [0.95238095 0.85714286 0.85       0.95       0.95       0.89473684\n",
-      " 0.89473684 0.84210526 1.         0.89473684]\n",
+      " [0.9047619  1.         0.8        0.95       0.9        1.\n",
+      " 0.94736842 0.89473684 0.89473684 0.94736842]\n",
       "\n",
       "score array mean:\n",
-      " 0.9085839598997494\n",
+      " 0.9238972431077694\n",
       "\n",
       "AUROC score:\n",
-      " 0.9720330237358101\n",
+      " 0.9883384932920537\n",
       "\n",
       "runtime:\n",
-      " 3.435350999999997 seconds\n"
+      " 4.716825 seconds\n"
      ]
     }
    ],
@@ -230,12 +237,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__Result:__ shows some overfitting, try applying subsample parameter"
+    "__Result:__ shows some overfitting (degree varies depending on output), try applying subsample parameter"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -244,22 +251,22 @@
      "text": [
       "\n",
       "Best parameters:\n",
-      " {'learning_rate': 1, 'loss': 'exponential', 'max_depth': 3, 'n_estimators': 125, 'subsample': 0.5}\n",
+      " {'learning_rate': 0.01, 'loss': 'exponential', 'max_depth': 2, 'n_estimators': 250, 'subsample': 0.4}\n",
       "\n",
       "Best score:\n",
-      " 0.9428208386277002\n",
+      " 0.9453621346886912\n",
       "\n",
       "runtime:\n",
-      " 1.9390590000000003 seconds\n"
+      " 5.990197000000009 seconds\n"
      ]
     }
    ],
    "source": [
     "params = [{'loss':['exponential'],\n",
-    "           'learning_rate':[1],\n",
-    "           'n_estimators':[125],\n",
-    "           'max_depth':[3],\n",
-    "           'subsample':[0.5, 0.6, 0.7, 0.8, 0.9]}]\n",
+    "           'learning_rate':[.01],\n",
+    "           'n_estimators':[250],\n",
+    "           'max_depth':[2],\n",
+    "           'subsample':[0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9]}]\n",
     "\n",
     "clf3 = ensemble.GradientBoostingClassifier()\n",
     "grid = GridSearchCV(estimator=clf3, param_grid=params)\n",
@@ -273,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -281,26 +288,26 @@
      "output_type": "stream",
      "text": [
       "score array:\n",
-      " [0.94936709 0.92405063 0.94936709 0.89873418 0.94936709 0.96202532\n",
-      " 0.93670886 0.96153846 0.98717949 0.91025641]\n",
+      " [0.96202532 0.91139241 0.96202532 0.93670886 0.98734177 0.92405063\n",
+      " 0.96202532 0.91025641 0.97435897 0.94871795]\n",
       "\n",
       "score array mean:\n",
-      " 0.9428594612138917\n",
+      " 0.9478902953586499\n",
       "\n",
       "AUROC score:\n",
-      " 1.0\n",
+      " 0.9927920945553188\n",
       "\n",
       "runtime:\n",
-      " 1.7450700000000055 seconds\n"
+      " 2.709973000000005 seconds\n"
      ]
     }
    ],
    "source": [
     "clf3 = ensemble.GradientBoostingClassifier(loss='exponential',\n",
-    "                                           learning_rate=1,\n",
-    "                                           n_estimators=125,\n",
-    "                                           max_depth=3,\n",
-    "                                           subsample=0.8)\n",
+    "                                           learning_rate=.01,\n",
+    "                                           n_estimators=250,\n",
+    "                                           max_depth=2,\n",
+    "                                           subsample=0.4)\n",
     "start_time = time.clock()\n",
     "clf3.fit(X_train, y_train)\n",
     "scores_clf3 = cross_val_score(clf3, X_train, y_train, cv=10)\n",
@@ -317,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -325,17 +332,17 @@
      "output_type": "stream",
      "text": [
       "score array:\n",
-      " [0.9047619  0.9047619  0.9        0.95       0.95       0.89473684\n",
-      " 0.94736842 0.84210526 1.         0.94736842]\n",
+      " [0.9047619  1.         0.8        0.95       0.95       1.\n",
+      " 0.94736842 0.89473684 0.89473684 0.89473684]\n",
       "\n",
       "score array mean:\n",
-      " 0.924110275689223\n",
+      " 0.9236340852130327\n",
       "\n",
       "AUROC score:\n",
-      " 0.9699690402476779\n",
+      " 0.9886480908152735\n",
       "\n",
       "runtime:\n",
-      " 2.2192819999999998 seconds\n"
+      " 5.153395000000003 seconds\n"
      ]
     }
    ],
@@ -362,12 +369,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Feature Selection"
+    "### Feature Selection\n",
+    "\n",
+    "Features are already principle components"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -376,11 +385,11 @@
      "text": [
       "10 kbest features:\n",
       "['V2', 'V3', 'V4', 'V9', 'V10', 'V11', 'V12', 'V14', 'V16', 'V17']\n",
-      "0    402\n",
-      "1    385\n",
+      "0    398\n",
+      "1    389\n",
       "Name: Class, dtype: int64\n",
-      "1    107\n",
-      "0     90\n",
+      "1    103\n",
+      "0     94\n",
       "Name: Class, dtype: int64\n"
      ]
     }
@@ -410,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -418,17 +427,17 @@
      "output_type": "stream",
      "text": [
       "score array:\n",
-      " [0.95       0.95       0.96202532 0.94936709 0.89873418 0.93589744\n",
-      " 0.96153846 0.94871795 0.92307692 0.93589744]\n",
+      " [0.94936709 0.89873418 0.89873418 0.94936709 0.96202532 0.93670886\n",
+      " 0.96202532 0.94936709 0.93589744 0.92207792]\n",
       "\n",
       "score array mean:\n",
-      " 0.9415254787406686\n",
+      " 0.9364304471899407\n",
       "\n",
       "AUROC score:\n",
       " 1.0\n",
       "\n",
       "runtime:\n",
-      " 1.0537500000000009 seconds\n"
+      " 1.0831489999999917 seconds\n"
      ]
     }
    ],
@@ -454,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -462,17 +471,17 @@
      "output_type": "stream",
      "text": [
       "score array:\n",
-      " [0.95       1.         0.9        1.         1.         0.95\n",
-      " 0.9        1.         0.94736842 0.89473684]\n",
+      " [0.95238095 0.95238095 0.9047619  1.         1.         0.94736842\n",
+      " 0.94736842 1.         0.78947368 0.89473684]\n",
       "\n",
       "score array mean:\n",
-      " 0.9542105263157895\n",
+      " 0.9388471177944862\n",
       "\n",
       "AUROC score:\n",
-      " 0.9771547248182761\n",
+      " 0.9806858087172071\n",
       "\n",
       "runtime:\n",
-      " 1.4591670000000008 seconds\n"
+      " 1.4745650000000126 seconds\n"
      ]
     }
    ],
@@ -496,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -504,17 +513,17 @@
      "output_type": "stream",
      "text": [
       "score array:\n",
-      " [0.9125     0.95       0.93670886 0.94936709 0.84810127 0.93589744\n",
-      " 0.94871795 0.91025641 0.8974359  0.94871795]\n",
+      " [0.92405063 0.89873418 0.92405063 0.92405063 0.94936709 0.87341772\n",
+      " 1.         0.92405063 0.88461538 0.88311688]\n",
       "\n",
       "score array mean:\n",
-      " 0.9237702856215515\n",
+      " 0.9185453786719611\n",
       "\n",
       "AUROC score:\n",
-      " 0.9755831233443174\n",
+      " 0.9755913242304066\n",
       "\n",
       "runtime:\n",
-      " 1.6436940000000035 seconds\n"
+      " 1.7359280000000012 seconds\n"
      ]
     }
    ],
@@ -535,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -543,17 +552,17 @@
      "output_type": "stream",
      "text": [
       "score array:\n",
-      " [0.7        0.85       0.85       0.85       0.9        0.7\n",
-      " 0.6        0.78947368 0.73684211 0.89473684]\n",
+      " [0.85714286 0.66666667 0.71428571 0.75       0.84210526 0.84210526\n",
+      " 0.84210526 0.78947368 0.57894737 0.84210526]\n",
       "\n",
       "score array mean:\n",
-      " 0.7871052631578948\n",
+      " 0.7724937343358396\n",
       "\n",
       "AUROC score:\n",
-      " 0.9757009345794393\n",
+      " 0.9795496798182194\n",
       "\n",
       "runtime:\n",
-      " 1.683790000000002 seconds\n"
+      " 1.7764520000000061 seconds\n"
      ]
     }
    ],
@@ -577,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -585,14 +594,14 @@
      "output_type": "stream",
      "text": [
       "score array:\n",
-      " [0.7625     0.675      0.7721519  0.70886076 0.6835443  0.75641026\n",
-      " 0.80769231 0.76923077 0.73076923 0.71794872]\n",
+      " [0.78481013 0.65822785 0.73417722 0.69620253 0.78481013 0.6835443\n",
+      " 0.87341772 0.74683544 0.71794872 0.68831169]\n",
       "\n",
       "score array mean:\n",
-      " 0.7384108244076598\n",
+      " 0.7368285722716102\n",
       "\n",
       "runtime:\n",
-      " 1.8225029999999975 seconds\n"
+      " 1.9633680000000027 seconds\n"
      ]
     }
    ],
@@ -613,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -621,14 +630,14 @@
      "output_type": "stream",
      "text": [
       "score array:\n",
-      " [0.8        0.8        0.8        0.9        0.75       0.65\n",
-      " 0.65       0.78947368 0.73684211 0.68421053]\n",
+      " [0.71428571 0.80952381 0.66666667 0.7        0.89473684 0.68421053\n",
+      " 0.73684211 0.84210526 0.57894737 0.73684211]\n",
       "\n",
       "score array mean:\n",
-      " 0.7560526315789474\n",
+      " 0.7364160401002506\n",
       "\n",
       "runtime:\n",
-      " 1.8727810000000034 seconds\n"
+      " 2.007283000000001 seconds\n"
      ]
     }
    ],
